[gd_scene load_steps=2 format=3 uid="uid://d383c2amhbhn"]

[ext_resource type="Script" path="res://stage_progress/stage_progress.gd" id="1_d05f6"]

[node name="StageProgress" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_right = 1280.0
offset_bottom = 35.0
grow_horizontal = 2
script = ExtResource("1_d05f6")

[node name="FloorProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_horizontal = 3
step = 1.0
value = 1.0
rounded = true
show_percentage = false

[node name="FloorProgressText" type="Label" parent="FloorProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Floor: 1/100"

[node name="EnemyProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_horizontal = 3
max_value = 15.0
step = 1.0
value = 1.0
rounded = true
show_percentage = false

[node name="EnemyProgressText" type="Label" parent="EnemyProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -11.5
offset_right = 47.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Enemy: 1/15"
